--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
             <!--Header-->
             <header class="uk-navbar-container uk-position-relative">
-                <nav uk-navbar>
+                <nav class="" uk-navbar>
                     <div class="uk-navbar-left">
 
                         <!--mobile menu toggle-->
@@ -38,7 +38,7 @@
                         <ul class="uk-navbar-nav uk-visible@l">
                             <li><a href="#"></a></li>
                             <li>
-                                <a href="#" class="uk-navbar-toggle" uk-navbar-toggle-icon></a>
+                                <a href="#"></a>
 
                                 <div class="uk-navbar-dropdown"
                                      uk-drop="mode: click; boundary: !header; boundary-align: true; pos: bottom-justify;">
