--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                             </ul>
 
                             <div class="uk-navbar-item">
-                                <button type="button" class="uk-button">Создать новую игру</button>
+                                <button type="button" class="uk-button uk-button-primary">Создать новую игру</button>
                             </div>
 
                         </div>
