--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="uk-padding">
+                <div class="tm-background-top uk-padding">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -78,7 +78,7 @@
                                 </div>
 
                                 <div>
-                                    <button type="button" class="uk-button">
+                                    <button type="button" class="tm-button-whitelist uk-button uk-button-default">
                                         <i class="fa fa-plus uk-margin-right" aria-hidden="true"></i>
                                         Whitelist
                                     </button>
