--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="uk-padding">
+                <div class="">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -115,6 +115,67 @@
 
                     </div>
                 </div>
+
+                <!--my game-->
+                <div class="">
+
+                    <div class="uk-flex-bottom" uk-grid>
+                        <div>
+                            <h2>Создать <br>
+                                новую игру
+                            </h2>
+                        </div>
+
+                        <!--type-->
+                        <div>
+                            <h3>Тип игры</h3>
+                            <div class="uk-grid-small" uk-grid>
+                                <div>
+                                    <select>
+                                        <option>Приватная</option>
+                                        <option>Другая</option>
+                                    </select>
+                                </div>
+
+                                <div>
+                                    <button type="button" class="uk-button">
+                                        <i class="fa fa-plus uk-margin-right" aria-hidden="true"></i>
+                                        Whitelist
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--new-->
+                        <div>
+                            <div class="uk-flex-bottom" uk-grid>
+                                <div>
+                                    <h3>Сумма ставки</h3>
+                                    <div>
+                                        <div class="uk-inline">
+                                            <span class="uk-form-icon uk-form-icon-flip">ETH</span>
+                                            <input class="uk-input" type="text" value="0.0001">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Макс. кол-во игроков</h3>
+                                    <div>
+                                        <input class="uk-input uk-text-center" type="text" value="0.0001">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <button type="button" class="uk-button">Играть</button>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
 
             </div>
 
