--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="">
+                <div class="tm-box">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -117,7 +117,7 @@
                 </div>
 
                 <!--my game-->
-                <div class="">
+                <div class="tm-box-small">
 
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
