--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="tm-box">
+                <div class="tm-box-large">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
