--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="tm-box-large">
+                <div class="tm-box-large uk-border-rounded">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -117,7 +117,10 @@
                 </div>
 
                 <!--my game-->
-                <div class="tm-box-small">
+                <div class="uk-border-rounded">
+                    <div class="tm-box-small">
+
+                    </div>
 
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
