--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                                     <div>
                                         <div class="uk-inline">
                                             <span class="uk-form-icon uk-form-icon-flip">ETH</span>
-                                            <input class="uk-input" type="text" value="0.0001">
+                                            <input class="uk-input uk-background-secondary" type="text" value="0.0001">
                                         </div>
                                     </div>
                                 </div>
@@ -102,7 +102,7 @@
                                 <div>
                                     <h3>Макс. кол-во игроков</h3>
                                     <div>
-                                        <input class="uk-input uk-text-center" type="text" value="0.0001">
+                                        <input class="uk-input uk-background-secondary uk-text-center" type="text" value="0.0001">
                                     </div>
                                 </div>
 
