--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,10 @@
                 <div class="uk-border-rounded">
                     <div class="tm-box-small">
                         <div class="uk-flex-bottom" uk-grid>
+                            <div>
+                                <h2>Мои игры: <span class="">56</span></h2>
+                            </div>
+
 
 
                         </div>
