--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-top">
 
                 <!--new game-->
-                <div class="tm-box-large uk-border-rounded">
+                <div class="tm-box-large tm-background-top uk-border-rounded">
                     <div class="uk-flex-bottom" uk-grid>
                         <div>
                             <h2>Создать <br>
@@ -78,7 +78,7 @@
                                 </div>
 
                                 <div>
-                                    <button type="button" class="uk-button">
+                                    <button type="button" class="tm-button-whitelist uk-button uk-button-default">
                                         <i class="fa fa-plus uk-margin-right" aria-hidden="true"></i>
                                         Whitelist
                                     </button>
@@ -94,7 +94,7 @@
                                     <div>
                                         <div class="uk-inline">
                                             <span class="uk-form-icon uk-form-icon-flip">ETH</span>
-                                            <input class="uk-input" type="text" value="0.0001">
+                                            <input class="tm-input-top uk-input uk-background-secondary" type="text" value="0.0001">
                                         </div>
                                     </div>
                                 </div>
@@ -102,12 +102,12 @@
                                 <div>
                                     <h3>Макс. кол-во игроков</h3>
                                     <div>
-                                        <input class="uk-input uk-text-center" type="text" value="0.0001">
+                                        <input class="tm-input-top uk-input uk-background-secondary uk-text-center" type="text" value="10">
                                     </div>
                                 </div>
 
                                 <div>
-                                    <button type="button" class="uk-button">Играть</button>
+                                    <button type="button" class="tm-button-tertiary uk-button">Играть</button>
                                 </div>
                             </div>
 
