styling top in progress 2

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
                             <!--new-->
                             <div class="uk-navbar-item">
-                                <button type="button" class="uk-button uk-button-primary">Создать новую игру</button>
+                                <button type="button" class="tm-button-new uk-button uk-button-primary">Создать новую игру</button>
                             </div>
 
                         </div>
