--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,7 @@
                                     <select>
                                         <option>Приватная</option>
                                         <option>Другая</option>
+                                        <option>Другая</option>
                                     </select>
                                 </div>
 
@@ -102,7 +103,7 @@
                                 <div>
                                     <h3>Макс. кол-во игроков</h3>
                                     <div>
-                                        <input class="uk-input uk-text-center" type="text" value="0.0001">
+                                        <input class="uk-input uk-text-center" type="text" value="10">
                                     </div>
                                 </div>
 
@@ -119,14 +120,95 @@
                 <!--my game-->
                 <div class="uk-border-rounded">
                     <div class="tm-box-small">
-                        <div class="uk-flex-bottom" uk-grid>
+                        <div class="uk-flex-bottom uk-flex-between" uk-grid>
                             <div>
                                 <h2>Мои игры: <span class="">56</span></h2>
                             </div>
 
+                            <div>
+                                <div class="uk-grid-small uk-flex-middle" uk-grid>
 
+                                    <!--sorting-->
+                                    <div>
+                                        <div class="uk-grid-small uk-flex-middle" uk-grid>
+                                            <div>
+                                                <h3>Сортировать</h3>
+                                            </div>
 
+                                            <div>
+                                                <select>
+                                                    <option>От большего количества участников к меньшему</option>
+                                                    <option>Другое</option>
+                                                    <option>Другое</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--show filter-->
+                                    <div>
+                                        <button type="button" class="uk-button"
+                                                uk-toggle="target: #tm-my-game-filter">
+                                            Фильтр
+                                        </button>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
+                    </div>
+
+                    <div class="tm-box">
+
+                        <!--filter-->
+                        <div id="tm-my-game-filter" class="tm-filter" hidden>
+                            <div class="uk-flex-between" uk-grid>
+                                <div>
+                                    <h3>Роль</h3>
+                                    <div class="uk-button-group">
+                                        <button class="uk-button">Участник</button>
+                                        <button class="uk-button">Создатель</button>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Тип игры</h3>
+                                    <div>
+                                        <select>
+                                            <option>Приватная</option>
+                                            <option>Другая</option>
+                                            <option>Другая</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Ставка</h3>
+                                    <div class="uk-flex uk-flex-middle">
+                                        <input class="uk-input" type="text" placeholder="от">
+                                        <span class="uk-margin-small-right uk-margin-small-left"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                        <input class="uk-input" type="text" placeholder="до">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Игроков</h3>
+                                    <div class="uk-flex uk-flex-middle">
+                                        <input class="uk-input" type="text" placeholder="от">
+                                        <span class="uk-margin-small-right uk-margin-small-left"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                        <input class="uk-input" type="text" placeholder="до">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <button type="button" class="uk-button">Показать</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- game cards -->
+                        <div class=""></div>
+
                     </div>
 
                 </div>
