--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                                     <!--show filter-->
                                     <div>
                                         <button type="button" class="uk-button"
-                                                uk-toggle="target: #tm-my-game-filter">
+                                                uk-toggle="target: #tm-my-game-filter; animation: uk-animation-fade">
                                             Фильтр
                                         </button>
                                     </div>
