--- a/src/index.html
+++ b/src/index.html
@@ -320,6 +320,7 @@
                                     </div>
                                 </div>
 
+                                <!--show more-->
                                 <div class="uk-width-1-1 uk-text-center">
                                     <button type="button" class="uk-button">Показать еще</button>
                                 </div>
