styling top in progress 4

--- a/src/index.html
+++ b/src/index.html
@@ -118,11 +118,11 @@
                 </div>
 
                 <!--my game-->
-                <div class="uk-border-rounded">
-                    <div class="tm-box-small">
+                <div class="uk-border-rounded uk-background-primary">
+                    <div class="tm-box-small uk-background-secondary">
                         <div class="uk-flex-bottom uk-flex-between" uk-grid>
                             <div>
-                                <h2>Мои игры: <span class="">56</span></h2>
+                                <h2 class="tm-fontweight-normal">Мои игры: <span class="tm-text-secondary">56</span></h2>
                             </div>
 
                             <div>
@@ -147,7 +147,7 @@
 
                                     <!--show filter-->
                                     <div>
-                                        <button type="button" class="uk-button"
+                                        <button type="button" class="tm-button-filter uk-button"
                                                 uk-toggle="target: #tm-my-game-filter; animation: uk-animation-fade">
                                             Фильтр
                                         </button>
