common games block add

--- a/src/index.html
+++ b/src/index.html
@@ -331,6 +331,220 @@
 
                 </div>
 
+                <!--common game-->
+                <div class="uk-border-rounded uk-background-primary">
+                    <div class="tm-box-small uk-background-secondary">
+                        <div class="uk-flex-bottom uk-flex-between" uk-grid>
+                            <div>
+                                <h2 class="tm-fontweight-normal">Доступно игр: <span class="tm-text-secondary">523</span></h2>
+                            </div>
+
+                            <div>
+                                <div class="uk-grid-small uk-flex-middle" uk-grid>
+
+                                    <!--sorting-->
+                                    <div>
+                                        <div class="uk-grid-small uk-flex-middle" uk-grid>
+                                            <div>
+                                                <h3>Сортировать</h3>
+                                            </div>
+
+                                            <div>
+                                                <select>
+                                                    <option>От большего количества участников к меньшему</option>
+                                                    <option>Другое</option>
+                                                    <option>Другое</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--show filter-->
+                                    <div>
+                                        <button type="button" class="tm-button-filter uk-button"
+                                                uk-toggle="target: #tm-common-game-filter; animation: uk-animation-fade">
+                                            Фильтр
+                                        </button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tm-box">
+
+                        <!--filter-->
+                        <div id="tm-common-game-filter" class="tm-filter" hidden>
+                            <div class="uk-flex-between" uk-grid>
+                                <div>
+                                    <h3>Роль</h3>
+                                    <div class="uk-button-group">
+                                        <button class="uk-button">Участник</button>
+                                        <button class="uk-button">Создатель</button>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Тип игры</h3>
+                                    <div>
+                                        <select>
+                                            <option>Приватная</option>
+                                            <option>Другая</option>
+                                            <option>Другая</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Ставка</h3>
+                                    <div class="uk-flex uk-flex-middle">
+                                        <input class="uk-input" type="text" placeholder="от">
+                                        <span class="uk-margin-small-right uk-margin-small-left"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                        <input class="uk-input" type="text" placeholder="до">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <h3>Игроков</h3>
+                                    <div class="uk-flex uk-flex-middle">
+                                        <input class="uk-input" type="text" placeholder="от">
+                                        <span class="uk-margin-small-right uk-margin-small-left"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                        <input class="uk-input" type="text" placeholder="до">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <button type="button" class="uk-button">Показать</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- game cards -->
+                        <div class="">
+                            <div class="uk-child-width-1-5" uk-grid>
+
+                                <!--card-->
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer">
+                                            <h3 class="">Приватная игра</h3>
+                                            <button type="button" class="uk-button">Зайти</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--card-->
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer">
+                                            <h3 class="">Приватная игра</h3>
+                                            <button type="button" class="uk-button">Зайти</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--card-->
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer">
+                                            <h3 class="">Приватная игра</h3>
+                                            <button type="button" class="uk-button">Зайти</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--card-->
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer">
+                                            <h3 class="">Приватная игра</h3>
+                                            <button type="button" class="uk-button">Зайти</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--card-->
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h3>Ставка</h3>
+                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                        </div>
+
+                                        <div class="uk-card-body uk-flex uk-flex-between">
+                                            <h3>Игроки</h3>
+                                            <div>
+                                                <span>2</span> из <span>5</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="uk-card-footer">
+                                            <h3 class="">Приватная игра</h3>
+                                            <button type="button" class="uk-button">Зайти</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--show more-->
+                                <div class="uk-width-1-1 uk-text-center">
+                                    <button type="button" class="uk-button">Показать еще</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
 
             </div>
 
