styling in progress 5

--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
                         </div>
 
                         <!-- game cards -->
-                        <div class="">
+                        <div class="tm-box-small">
                             <div class="uk-child-width-1-5" uk-grid>
 
                                 <!--card-->
@@ -227,7 +227,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -249,7 +249,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -271,7 +271,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -293,7 +293,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -315,14 +315,14 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
 
                                 <!--show more-->
                                 <div class="uk-width-1-1 uk-text-center">
-                                    <button type="button" class="uk-button">Показать еще</button>
+                                    <button type="button" class="uk-button uk-button-default">Показать еще</button>
                                 </div>
                             </div>
                         </div>
