styling in progress 6

--- a/src/index.html
+++ b/src/index.html
@@ -441,7 +441,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -463,7 +463,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -485,7 +485,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -507,7 +507,7 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -529,14 +529,14 @@
 
                                         <div class="uk-card-footer">
                                             <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button">Зайти</button>
+                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
 
                                 <!--show more-->
                                 <div class="uk-width-1-1 uk-text-center">
-                                    <button type="button" class="uk-button">Показать еще</button>
+                                    <button type="button" class="uk-button uk-button-default">Показать еще</button>
                                 </div>
                             </div>
                         </div>
