--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
                                     <div class="uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                            <div class="bet">1.9999 <sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
                                         <div class="uk-card-body uk-flex uk-flex-between">
@@ -226,8 +226,8 @@
                                         </div>
 
                                         <div class="uk-card-footer">
-                                            <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                            <h3 class="tm-title-marked">Приватная игра</h3>
+                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +237,7 @@
                                     <div class="uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                            <div class="bet">1.9999 <sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
                                         <div class="uk-card-body uk-flex uk-flex-between">
@@ -248,8 +248,8 @@
                                         </div>
 
                                         <div class="uk-card-footer">
-                                            <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                            <h3 class="tm-title-marked">Приватная игра</h3>
+                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -259,7 +259,7 @@
                                     <div class="uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                            <div class="bet">1.9999 <sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
                                         <div class="uk-card-body uk-flex uk-flex-between">
@@ -270,8 +270,8 @@
                                         </div>
 
                                         <div class="uk-card-footer">
-                                            <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                            <h3 class="tm-title-marked">Приватная игра</h3>
+                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@
                                     <div class="uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                            <div class="bet">1.9999 <sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
                                         <div class="uk-card-body uk-flex uk-flex-between">
@@ -292,8 +292,8 @@
                                         </div>
 
                                         <div class="uk-card-footer">
-                                            <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                            <h3 class="tm-title-marked">Приватная игра</h3>
+                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
@@ -303,7 +303,7 @@
                                     <div class="uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
-                                            <div class="bet">1.9999 <sup>eth</sup></div>
+                                            <div class="bet">1.9999 <sup class="uk-text-uppercase">eth</sup></div>
                                         </div>
 
                                         <div class="uk-card-body uk-flex uk-flex-between">
@@ -314,8 +314,8 @@
                                         </div>
 
                                         <div class="uk-card-footer">
-                                            <h3 class="">Приватная игра</h3>
-                                            <button type="button" class="uk-button uk-button-primary">Зайти</button>
+                                            <h3 class="tm-title-marked">Приватная игра</h3>
+                                            <button type="button" class="uk-button uk-button-primary uk-width-1-1">Зайти</button>
                                         </div>
                                     </div>
                                 </div>
