--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
                         </div>
 
                         <!-- game cards -->
-                        <div class="tm-box-small">
+                        <div class="">
                             <div class="uk-child-width-1-5" uk-grid>
 
                                 <!--card-->
